Upgrade StructureWoodVariant into WoodPalette & add registry interop