@@ -1,14 +1,20 @@
 package twilightforest.data;
 
 import net.minecraft.core.HolderLookup;
+import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.RegistrySetBuilder;
+import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
+import net.minecraft.data.DataGenerator;
 import net.minecraft.data.PackOutput;
 import net.minecraftforge.common.data.DatapackBuiltinEntriesProvider;
+import net.minecraftforge.common.data.ExistingFileHelper;
 import twilightforest.TwilightForestMod;
+import twilightforest.data.tags.CustomTagGenerator;
 import twilightforest.init.*;
+import twilightforest.init.custom.WoodPalettes;
 
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
 public class WorldGenerator extends DatapackBuiltinEntriesProvider {
@@ -22,9 +28,22 @@ public class WorldGenerator extends DatapackBuiltinEntriesProvider {
 			.add(Registries.NOISE_SETTINGS, TFDimensionSettings::bootstrapNoise)
 			.add(Registries.DIMENSION_TYPE, TFDimensionSettings::bootstrapType)
 			.add(Registries.LEVEL_STEM, TFDimensionSettings::bootstrapStem)
-			.add(Registries.BIOME, TFBiomes::bootstrap);
+			.add(Registries.BIOME, TFBiomes::bootstrap)
+			.add(WoodPalettes.WOOD_PALETTE_TYPE_KEY, WoodPalettes::bootstrap);
 
-	public WorldGenerator(PackOutput output, CompletableFuture<HolderLookup.Provider> provider) {
-		super(output, provider, BUILDER, Collections.singleton(TwilightForestMod.ID));
+	// Use addProviders() instead
+	private WorldGenerator(PackOutput output, CompletableFuture<HolderLookup.Provider> provider) {
+		super(output, provider, BUILDER, Set.of("minecraft", TwilightForestMod.ID));
+	}
+
+	public static void addProviders(boolean isServer, DataGenerator generator, PackOutput output, CompletableFuture<HolderLookup.Provider> provider, ExistingFileHelper helper) {
+		generator.addProvider(isServer, new WorldGenerator(output, provider));
+		// This is needed here because Minecraft Forge doesn't properly support tagging custom registries, without problems.
+		// If you think this looks fixable, please ensure the fixes are tested in runData & runClient as these current issues exist entirely within Forge's internals.
+		generator.addProvider(isServer, new CustomTagGenerator.WoodPaletteTagGenerator(output, provider.thenApply(r -> append(r, BUILDER)), helper));
+	}
+
+	private static HolderLookup.Provider append(HolderLookup.Provider original, RegistrySetBuilder builder) {
+		return builder.buildPatch(RegistryAccess.fromRegistryOfRegistries(BuiltInRegistries.REGISTRY), original);
 	}
 }
